--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,6 +20,10 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<meta name="description" content="FPA Architect" />
+		<meta
+			name="google-site-verification"
+			content="FhxV8MYjX8IG22_UdZa41VvtIszHWi1NC0R9Hm8qZEg"
+		/>
 
 		<link rel="icon" type="image/png" href="/olga_favicon.png" />
 		<link rel="sitemap" href="/sitemap-index.xml" />
