--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -18,7 +18,7 @@ import Layout from "../layouts/Layout.astro";
 				<h1 class="mb-8 font-heading text-4xl">Olga Podushkina</h1>
 			</header>
 
-			<div class="flex flex-col gap-4">
+			<div class="flex flex-col gap-4 lg:text-xl">
 				<p>
 					Owner and leading project architect of the architectural studio
 					FPA-architect.
