--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -36,6 +36,9 @@ const { title } = Astro.props;
 			<ul class="flex items-center justify-center gap-4 p-4">
 				<li class="hover:text-white hover:underline"><a href="/">HOME</a></li>
 				<li class="hover:text-white hover:underline">
+					<a href="/projects">PROJECTS</a>
+				</li>
+				<li class="hover:text-white hover:underline">
 					<a href="/about">ABOUT</a>
 				</li>
 			</ul>
@@ -46,9 +49,9 @@ const { title } = Astro.props;
 		</main>
 
 		<footer
-			class="flex items-center justify-center gap-2 border-t-1 border-gray-400 p-2"
+			class="flex items-center justify-center gap-2 border-t-2 border-gray-400 p-2"
 		>
-			<p class="text-gray-400">@Olga Podushkina</p>
+			<p class="text-gray-400">olga@fpa-architect.org</p>
 			<a href="https://www.linkedin.com/in/ольга-подушкина-a4742168">
 				<Image
 					class="object-contain"
