--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -58,10 +58,10 @@ const projects = sortedCurrentProjects.concat(completedProjects);
 <Layout title="Projects">
 	<project-list>
 		<section
-			class="mx-auto grid max-w-screen-xl items-baseline gap-4 px-4 py-32 sm:grid-cols-[1fr_3fr]"
+			class="mx-auto grid max-w-screen-xl items-baseline gap-8 px-4 py-32 sm:grid-cols-[1fr_3fr] sm:gap-4 lg:text-xl"
 		>
-			<div>
-				<div class="mb-20">
+			<div class="flex justify-between gap-4 sm:flex-col sm:gap-8">
+				<div class="flex-1">
 					<div class="border-b-2">
 						<p class="">Current Projects</p>
 					</div>
@@ -82,7 +82,7 @@ const projects = sortedCurrentProjects.concat(completedProjects);
 					</div>
 				</div>
 
-				<div>
+				<div class="flex-1">
 					<div class="border-b-2">
 						<p class="">Completed Projects</p>
 					</div>
