update astro, contact

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -41,4 +41,23 @@ import Layout from "../layouts/Layout.astro";
 			</div>
 		</div>
 	</section>
+
+	<section
+		class="mx-auto grid max-w-screen-xl items-center justify-center gap-8 px-4 py-32 sm:grid-cols-2"
+		id="contact"
+	>
+		<header class="sm:justify-self-end">
+			<h1 class="font-heading text-4xl">Contact</h1>
+		</header>
+
+		<ul class="lg:text-xl">
+			<li>
+				<a class="text-blue-500" href="mailto:olga@fpa-architect.org"
+					>olga@fpa-architect.org</a
+				>
+			</li>
+			<li>+38 067 562 56 48</li>
+			<li>+38 066 725 07 35</li>
+		</ul>
+	</section>
 </Layout>
