--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -41,6 +41,9 @@ const { title } = Astro.props;
 				<li class="hover:text-white hover:underline">
 					<a href="/about">ABOUT</a>
 				</li>
+				<li class="hover:text-white hover:underline">
+					<a href="/about#contact">CONTACT</a>
+				</li>
 			</ul>
 		</nav>
 
@@ -51,7 +54,6 @@ const { title } = Astro.props;
 		<footer
 			class="flex items-center justify-center gap-2 border-t-2 border-gray-400 p-2"
 		>
-			<p class="text-gray-400">olga@fpa-architect.org</p>
 			<a href="https://www.linkedin.com/in/ольга-подушкина-a4742168">
 				<Image
 					class="object-contain"
