--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -1,5 +1,7 @@
 ---
+import type { ImageMetadata } from "astro";
 import type { CollectionEntry } from "astro:content";
+import { Image } from "astro:assets";
 import { render } from "astro:content";
 
 interface Props {
@@ -8,7 +10,24 @@ interface Props {
 
 const { project } = Astro.props;
 
+const images = import.meta.glob<{ default: ImageMetadata }>(
+	"/src/projects/**/*.{jpg,jpeg,png}",
+);
+const imagesPath = project.filePath?.replace(/\.[^/.]+$/, "/") as string;
+
+let projectImages: typeof images = {};
+Object.keys(images)
+	.filter((image) => new RegExp(imagesPath).test(image))
+	.forEach((image) => (projectImages[image] = images[image]));
+
 const { Content } = await render(project);
 ---
 
 <Content />
+<div class="grid gap-4">
+	{
+		Object.values(projectImages).map((image) => (
+			<Image class="w-full object-cover" src={image()} alt={""} />
+		))
+	}
+</div>
