--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,4 +1,5 @@
 ---
+import type { CollectionEntry } from "astro:content";
 import Project from "../components/Project.astro";
 import Layout from "../layouts/Layout.astro";
 import { getCollection } from "astro:content";
@@ -6,16 +7,35 @@ import { getCollection } from "astro:content";
 const currentProjects = await getCollection("projects", ({ data }) => {
 	return data.endDate === undefined;
 });
-const sortedCurrentProjects = currentProjects.sort(
-	// Latest.
-	({ data: a }, { data: b }) => b.startDate.getTime() - a.startDate.getTime(),
-);
-
 const completedProjects = await getCollection("projects", ({ data }) => {
 	return data.endDate !== undefined;
 });
 
-const projects = sortedCurrentProjects.concat(completedProjects);
+function getProjectsMap(projects: CollectionEntry<"projects">[]) {
+	const sorted = projects.sort(
+		// Latest.
+		({ data: a }, { data: b }) => b.startDate.getTime() - a.startDate.getTime(),
+	);
+
+	const map: Map<number, CollectionEntry<"projects">[]> = new Map();
+
+	sorted.forEach((project) => {
+		const key = project.data.startDate.getFullYear();
+		if (!map.has(key)) {
+			map.set(key, []);
+		}
+		map.get(key)?.push(project);
+	});
+
+	return map;
+}
+
+const currentProjectsMap = getProjectsMap(currentProjects);
+const completedProjectsMap = getProjectsMap(completedProjects);
+
+const projects = [...currentProjectsMap.values()]
+	.flat()
+	.concat([...completedProjects.values()].flat());
 ---
 
 <script>
@@ -43,12 +63,16 @@ const projects = sortedCurrentProjects.concat(completedProjects);
 
 				buttons.forEach((button, j) => {
 					if (index === j) {
-						button.parentElement?.classList.add("list-disc");
+						//button.parentElement?.classList.add("list-disc");
+						button.classList.add("underline");
 					} else {
-						button.parentElement?.classList.remove("list-disc");
+						//button.parentElement?.classList.remove("list-disc");
+						button.classList.remove("underline");
 					}
 				});
 			}
+
+			setActiveProject(0);
 		}
 	}
 
@@ -60,46 +84,58 @@ const projects = sortedCurrentProjects.concat(completedProjects);
 		<section
 			class="mx-auto grid max-w-screen-xl items-baseline gap-8 px-4 py-32 sm:grid-cols-[1fr_3fr] sm:gap-4 lg:text-xl"
 		>
-			<div class="flex justify-between gap-4 sm:flex-col sm:gap-8">
+			<div
+				class="top-5 left-0 flex justify-between gap-4 sm:sticky sm:flex-col sm:gap-8"
+			>
 				<div class="flex-1">
 					<div class="border-b-2">
-						<p class="">Current Projects</p>
+						<p class="text-center">Current Projects</p>
 					</div>
 					<div
-						class="border-r-2 pt-2 [border-image:linear-gradient(to_bottom,#fff,#00000000)_1_100%]"
+						class="border-r-2 [border-image:linear-gradient(to_bottom,#fff,#00000000)_1_100%]"
 					>
-						<ul class="px-6 py-2">
-							{
-								sortedCurrentProjects.map((project, i) => (
-									<li class:list={i === 0 ? "list-disc" : ""}>
-										<button class="cursor-pointer hover:underline">
-											{project.data.title}
-										</button>
-									</li>
-								))
-							}
-						</ul>
+						{
+							currentProjectsMap.entries().map(([year, projects]) => (
+								<div>
+									<p>{year}</p>
+									<ul class="px-6 py-2">
+										{projects.map((project, i) => (
+											<li>
+												<button class="cursor-pointer hover:underline">
+													{project.data.title}
+												</button>
+											</li>
+										))}
+									</ul>
+								</div>
+							))
+						}
 					</div>
 				</div>
 
 				<div class="flex-1">
 					<div class="border-b-2">
-						<p class="">Completed Projects</p>
+						<p class="text-center">Completed Projects</p>
 					</div>
 					<div
-						class="border-r-2 [border-image:linear-gradient(to_bottom,#fff,#00000000)_1_100%]"
+						class="max-h-[448px] overflow-y-scroll border-r-2 [border-image:linear-gradient(to_bottom,#fff,#00000000)_1_100%]"
 					>
-						<ul class="px-6 py-2">
-							{
-								completedProjects.map((project) => (
-									<li>
-										<button class="cursor-pointer hover:underline">
-											{project.data.title}
-										</button>
-									</li>
-								))
-							}
-						</ul>
+						{
+							completedProjectsMap.entries().map(([year, projects]) => (
+								<div class="py-8">
+									<p class="">{year}</p>
+									<ul class="grid gap-4">
+										{projects.map((project) => (
+											<li class="pl-4">
+												<button class="cursor-pointer text-start hover:underline">
+													{project.data.title}
+												</button>
+											</li>
+										))}
+									</ul>
+								</div>
+							))
+						}
 					</div>
 				</div>
 			</div>
@@ -107,7 +143,7 @@ const projects = sortedCurrentProjects.concat(completedProjects);
 			<div>
 				{
 					projects.map((project, i) => (
-						<div class:list={i === 0 ? "" : "hidden"} class="project">
+						<div class="project">
 							<header class="border-b-2">
 								<h1 class="text-center font-heading text-4xl">
 									{project.data.title}
