--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -102,7 +102,7 @@ const projects = [
 									<ul class="grid gap-4">
 										{projects.map((project) => (
 											<li class="px-4">
-												<button class="cursor-pointer text-start hover:underline">
+												<button class="cursor-pointer text-start underline hover:underline">
 													{project.data.title}
 												</button>
 											</li>
